// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.internal.artifacts.oci;

option go_package = "namespacelabs.dev/foundation/internal/artifacts/oci";

message RawDescriptor {
    string repository   = 1;
    string media_type   = 2;
    bytes  raw_manifest = 3;
    bytes  raw_config   = 4;  // Only available when the descriptor points at an image.
}
